deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stack-api 
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: stack-api
      author: SteffinJoseph
      org: default
      space: default
  template:
    metadata:
      labels:
        app: stack-api
        author: SteffinJoseph
        org: default
        space: default
    spec:
      containers:
        - name: stack-api
          image: stack_app
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 1000Mi
