service.yml
apiVersion: v1
kind: Service
metadata:
  name: stack-api
  namespace: default
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: stack-api
